# smolagents-starter

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
site/: index.html  styles.css
