[project]
name = "smolagents-starter"
version = "0.1.0"
description = "A minimal web-search CodeAgent starter powered by Hugging Face smolagents and Nebius Token Factory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "smolagents[openai,toolkit]>=1.26.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
smolagents-starter = "main:main"

[tool.ruff]
line-length = 100
